--- a/data/interfaces/app_window.ui
+++ b/data/interfaces/app_window.ui
@@ -28,13 +28,15 @@
                               </object>
                             </child>
                             <child>
-                              <object class="GtkSwitch">
+                              <object class="GtkSwitch" id="ablement_switch">
+                                <property name="sensitive">False</property>
                                 <property name="valign">baseline-center</property>
                                 <signal name="state-set" handler="switch_ablement_state_set" swapped="yes"/>
                               </object>
                             </child>
                             <child>
-                              <object class="GtkButton">
+                              <object class="GtkButton" id="start_button">
+                                <property name="sensitive">False</property>
                                 <property name="tooltip-text">Start unit</property>
                                 <signal name="clicked" handler="button_start_clicked" swapped="yes"/>
                                 <child>
@@ -46,7 +48,8 @@
                               </object>
                             </child>
                             <child>
-                              <object class="GtkButton">
+                              <object class="GtkButton" id="stop_button">
+                                <property name="sensitive">False</property>
                                 <signal name="clicked" handler="button_stop_clicked" swapped="yes"/>
                                 <child>
                                   <object class="AdwButtonContent">
@@ -58,7 +61,8 @@
                               </object>
                             </child>
                             <child>
-                              <object class="GtkButton">
+                              <object class="GtkButton" id="restart_button">
+                                <property name="sensitive">False</property>
                                 <property name="tooltip-text">Restart unit</property>
                                 <signal name="clicked" handler="button_restart_clicked" swapped="yes"/>
                                 <child>
