--- a/data/interfaces/unit_list_panel.ui
+++ b/data/interfaces/unit_list_panel.ui
@@ -9,14 +9,14 @@
     <property name="vexpand">True</property>
     <property name="width-request">150</property>
     <child>
-      <object class="GtkSearchBar">
-        <child>
+      <object class="GtkSearchBar" id="search_bar">
+        <property name="child">
           <object class="GtkBox">
             <child>
               <object class="GtkSearchEntry"/>
             </child>
           </object>
-        </child>
+        </property>
       </object>
     </child>
     <child>
