--- a/data/interfaces/unit_list_panel.ui
+++ b/data/interfaces/unit_list_panel.ui
@@ -9,15 +9,7 @@
     <property name="vexpand">True</property>
     <property name="width-request">150</property>
     <child>
-      <object class="GtkSearchBar" id="search_bar">
-        <property name="child">
-          <object class="GtkBox">
-            <child>
-              <object class="GtkSearchEntry"/>
-            </child>
-          </object>
-        </property>
-      </object>
+      <object class="GtkSearchBar" id="search_bar"/>
     </child>
     <child>
       <object class="GtkScrolledWindow">
@@ -27,7 +19,7 @@
             <property name="model">
               <object class="GtkSingleSelection" id="single_selection">
                 <property name="model">
-                  <object class="GtkFilterListModel">
+                  <object class="GtkFilterListModel" id="filter_list_model">
                     <property name="model">
                       <object class="GtkSortListModel" id="unit_list_sort_list_model">
                         <property name="model">
