--- a/data/interfaces/unit_list_panel.ui
+++ b/data/interfaces/unit_list_panel.ui
@@ -30,6 +30,8 @@
                   </object>
                 </property>
                 <signal name="selection-changed" handler="single_selection_selection_changed" swapped="yes"/>
+                <signal name="sections-changed" handler="sections_changed" swapped="yes"/>
+                <signal name="items-changed" handler="items_changed" swapped="yes"/>
               </object>
             </property>
             <property name="vexpand">True</property>
