--- a/data/interfaces/kill_panel.ui
+++ b/data/interfaces/kill_panel.ui
@@ -12,16 +12,37 @@
     <child>
       <object class="GtkLabel">
         <property name="css-classes">title-1</property>
-        <property name="label">Kill process</property>
+        <property name="label">Kill unit</property>
+        <child>
+          <object class="GtkLabel"/>
+        </child>
+      </object>
+    </child>
+    <child>
+      <object class="GtkLabel" id="unit_label">
+        <property name="ellipsize">end</property>
+        <property name="single-line-mode">True</property>
+        <property name="width-chars">30</property>
       </object>
     </child>
     <child>
       <object class="AdwPreferencesGroup">
         <property name="title">Signal</property>
         <child>
-          <object class="AdwEntryRow" id="signal_id_text">
+          <object class="AdwEntryRow" id="signal_id_entry">
             <property name="title">Send signal: </property>
-            <signal name="insert-text" handler="kill_signal_insert_text" swapped="yes" after="yes"/>
+            <signal name="changed" handler="kill_signal_text_change" swapped="yes"/>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
+      <object class="AdwPreferencesGroup">
+        <property name="title">Who</property>
+        <child>
+          <object class="AdwComboRow" id="who_to_kill">
+            <property name="title">who to kill</property>
+            <!-- Custom object fragments -->
           </object>
         </child>
       </object>
@@ -46,6 +67,20 @@
           </object>
         </child>
       </object>
+    </child>
+    <child>
+      <object class="GtkScrolledWindow">
+        <property name="vexpand">True</property>
+        <child>
+          <object class="AdwPreferencesGroup" id="signals_group">
+            <property name="description">most common linux signals</property>
+            <property name="title">Common signals</property>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child>
+      <object class="AdwClampScrollable"/>
     </child>
   </template>
 </interface>
