refactor extract module

--- a/data/interfaces/app_window.ui
+++ b/data/interfaces/app_window.ui
@@ -16,137 +16,7 @@
                 <child>
                   <object class="GtkPaned" id="paned">
                     <property name="end-child">
-                      <object class="GtkBox">
-                        <property name="orientation">vertical</property>
-                        <property name="spacing">5</property>
-                        <child>
-                          <object class="GtkBox">
-                            <property name="spacing">5</property>
-                            <child>
-                              <object class="GtkLabel">
-                                <property name="label">Enabled:</property>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkSwitch" id="ablement_switch">
-                                <property name="sensitive">False</property>
-                                <property name="valign">baseline-center</property>
-                                <signal name="state-set" handler="switch_ablement_state_set" swapped="yes"/>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkButton" id="start_button">
-                                <property name="sensitive">False</property>
-                                <property name="tooltip-text">Start unit</property>
-                                <signal name="clicked" handler="button_start_clicked" swapped="yes"/>
-                                <child>
-                                  <object class="AdwButtonContent">
-                                    <property name="icon-name">media-playback-start-symbolic</property>
-                                    <property name="label">Start</property>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="AdwSplitButton">
-                                <property name="icon-name">media-playback-start-symbolic</property>
-                                <property name="label">Sart</property>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkButton" id="stop_button">
-                                <property name="sensitive">False</property>
-                                <signal name="clicked" handler="button_stop_clicked" swapped="yes"/>
-                                <child>
-                                  <object class="AdwButtonContent">
-                                    <property name="icon-name">process-stop</property>
-                                    <property name="label">Stop</property>
-                                    <property name="tooltip-text">Stop unit</property>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkButton" id="restart_button">
-                                <property name="sensitive">False</property>
-                                <property name="tooltip-text">Restart unit</property>
-                                <signal name="clicked" handler="button_restart_clicked" swapped="yes"/>
-                                <child>
-                                  <object class="AdwButtonContent">
-                                    <property name="icon-name">view-refresh</property>
-                                    <property name="label">Restart</property>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="GtkButton" id="kill_button">
-                                <property name="sensitive">False</property>
-                                <signal name="clicked" handler="button_kill_clicked" swapped="yes"/>
-                                <child>
-                                  <object class="AdwButtonContent">
-                                    <property name="icon-name">face-sick-symbolic</property>
-                                    <property name="label">Kill</property>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="AdwOverlaySplitView" id="side_overlay">
-                            <property name="collapsed">True</property>
-                            <property name="content">
-                              <object class="GtkBox">
-                                <property name="orientation">vertical</property>
-                                <child>
-                                  <object class="AdwViewSwitcher">
-                                    <property name="margin-bottom">5</property>
-                                    <property name="policy">wide</property>
-                                    <property name="stack">unit_stack</property>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="AdwViewStack" id="unit_stack">
-                                    <child>
-                                      <object class="AdwViewStackPage">
-                                        <property name="child">
-                                          <object class="UnitInfoPanel" id="unit_info_panel"/>
-                                        </property>
-                                        <property name="icon-name">emblem-documents-symbolic</property>
-                                        <property name="title">Unit Info</property>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="AdwViewStackPage">
-                                        <property name="child">
-                                          <object class="UnitFilePanel" id="unit_file_panel"/>
-                                        </property>
-                                        <property name="icon-name">text-x-generic-symbolic</property>
-                                        <property name="title">File</property>
-                                      </object>
-                                    </child>
-                                    <child>
-                                      <object class="AdwViewStackPage">
-                                        <property name="child">
-                                          <object class="JournalPanel" id="unit_journal_panel"/>
-                                        </property>
-                                        <property name="icon-name">format-justify-fill</property>
-                                        <property name="title">Journal</property>
-                                      </object>
-                                    </child>
-                                  </object>
-                                </child>
-                              </object>
-                            </property>
-                            <property name="min-sidebar-width">200.0</property>
-                            <property name="sidebar">
-                              <object class="KillPanel" id="kill_panel"/>
-                            </property>
-                            <property name="sidebar-position">end</property>
-                          </object>
-                        </child>
-                      </object>
+                      <object class="UnitControlPanel" id="unit_control_panel"/>
                     </property>
                     <property name="position-set">True</property>
                     <property name="shrink-start-child">False</property>
