--- a/data/interfaces/unit_control_panel.ui
+++ b/data/interfaces/unit_control_panel.ui
@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <!-- Created with Cambalache 0.92.1 -->
 <interface>
+  <!-- interface-name unit_control_panel.ui -->
   <requires lib="gtk" version="4.12"/>
   <requires lib="libadwaita" version="1.4"/>
   <template class="UnitControlPanel" parent="GtkBox">
@@ -22,7 +23,17 @@
           </object>
         </child>
         <child>
-          <object class="GtkButton" id="start_button">
+          <object class="AdwSplitButton" id="start_button">
+            <property name="dropdown-tooltip">Modes</property>
+            <property name="popover">
+              <object class="GtkPopover">
+                <child>
+                  <object class="GtkBox" id="start_modes">
+                    <property name="orientation">vertical</property>
+                  </object>
+                </child>
+              </object>
+            </property>
             <property name="sensitive">False</property>
             <property name="tooltip-text">Start unit</property>
             <signal name="clicked" handler="button_start_clicked" swapped="yes"/>
@@ -35,28 +46,19 @@
           </object>
         </child>
         <child>
-          <object class="AdwSplitButton">
+          <object class="AdwSplitButton" id="stop_button">
             <property name="dropdown-tooltip">Modes</property>
             <property name="popover">
               <object class="GtkPopover">
                 <child>
-                  <object class="GtkBox" id="start_modes">
+                  <object class="GtkBox" id="stop_modes">
                     <property name="orientation">vertical</property>
                   </object>
                 </child>
               </object>
             </property>
-            <child>
-              <object class="AdwButtonContent">
-                <property name="icon-name">media-playback-start-symbolic</property>
-                <property name="label">Start</property>
-              </object>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="GtkButton" id="stop_button">
             <property name="sensitive">False</property>
+            <property name="tooltip-text">Stop unit</property>
             <signal name="clicked" handler="button_stop_clicked" swapped="yes"/>
             <child>
               <object class="AdwButtonContent">
@@ -68,7 +70,17 @@
           </object>
         </child>
         <child>
-          <object class="GtkButton" id="restart_button">
+          <object class="AdwSplitButton" id="restart_button">
+            <property name="dropdown-tooltip">Modes</property>
+            <property name="popover">
+              <object class="GtkPopover">
+                <child>
+                  <object class="GtkBox" id="restart_modes">
+                    <property name="orientation">vertical</property>
+                  </object>
+                </child>
+              </object>
+            </property>
             <property name="sensitive">False</property>
             <property name="tooltip-text">Restart unit</property>
             <signal name="clicked" handler="button_restart_clicked" swapped="yes"/>
