--- a/data/interfaces/app_window.ui
+++ b/data/interfaces/app_window.ui
@@ -7,32 +7,31 @@
   <requires lib="gio" version="2.0"/>
   <menu id="main-menu">
     <section>
-      <attribute name="label">Commands</attribute>
-      <item>
-        <attribute name="label">Reload</attribute>
-      </item>
       <item>
         <attribute name="action">app.analyze_blame</attribute>
         <attribute name="label">Analyze Blame</attribute>
       </item>
-    </section>
-    <section>
-      <attribute name="label" translatable="yes">Config</attribute>
       <item>
-        <attribute name="action">app.preferences</attribute>
-        <attribute name="label" translatable="yes">Preferences</attribute>
-      </item>
-      <item>
-        <attribute name="action">app.about</attribute>
-        <attribute name="label" translatable="yes">About</attribute>
+        <attribute name="action">app.reload_all_units</attribute>
+        <attribute name="label">Reload All Units</attribute>
       </item>
       <item>
         <attribute name="action">app.systemd_info</attribute>
         <attribute name="label">Systemd Info</attribute>
       </item>
+    </section>
+    <section>
+      <item>
+        <attribute name="action">app.preferences</attribute>
+        <attribute name="label" translatable="yes">Preferences</attribute>
+      </item>
       <item>
         <attribute name="action">win.show-help-overlay</attribute>
         <attribute name="label">Keyboard Shortcuts</attribute>
+      </item>
+      <item>
+        <attribute name="action">app.about</attribute>
+        <attribute name="label" translatable="yes">About</attribute>
       </item>
     </section>
   </menu>
