--- a/data/interfaces/preferences.ui
+++ b/data/interfaces/preferences.ui
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.92.1 -->
+<!-- Created with Cambalache 0.92.2 -->
 <interface>
   <!-- interface-name preferences.ui -->
   <requires lib="gtk" version="4.10"/>
@@ -19,24 +19,6 @@
                 <child>
                   <object class="AdwPreferencesGroup">
                     <property name="title">Configuration properties</property>
-                    <child>
-                      <object class="AdwActionRow">
-                        <property name="title">Dbus level</property>
-                        <child>
-                          <object class="GtkDropDown" id="dbus_level_dropdown">
-                            <property name="model">
-                              <object class="GtkStringList">
-                                <items>
-                                  <item>Session</item>
-                                  <item>System</item>
-                                </items>
-                              </object>
-                            </property>
-                            <property name="valign">center</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
                     <child>
                       <object class="AdwActionRow">
                         <property name="subtitle">To see the logs in color</property>
@@ -59,6 +41,12 @@
                             <signal name="state-set" handler="unit_file_highlighting_state_set" swapped="yes"/>
                           </object>
                         </child>
+                      </object>
+                    </child>
+                    <child>
+                      <object class="AdwComboRow" id="enable_unit_file_mode">
+                        <property name="subtitle">The mode used to enable / disable unit files</property>
+                        <property name="title">Enable unit file mode</property>
                       </object>
                     </child>
                   </object>
