--- a/data/interfaces/unit_list_panel.ui
+++ b/data/interfaces/unit_list_panel.ui
@@ -1,104 +1,127 @@
 <?xml version='1.0' encoding='UTF-8'?>
-<!-- Created with Cambalache 0.92.1 -->
+<!-- Created with Cambalache 0.92.2 -->
 <interface>
   <!-- interface-name unit_list_panel.ui -->
   <requires lib="gio" version="2.44"/>
   <requires lib="gtk" version="4.14"/>
+  <requires lib="libadwaita" version="1.6"/>
   <template class="UnitListPanel" parent="GtkBox">
     <property name="orientation">vertical</property>
     <property name="vexpand">True</property>
     <property name="width-request">150</property>
     <child>
-      <object class="GtkSearchBar" id="search_bar"/>
-    </child>
-    <child>
-      <object class="GtkScrolledWindow">
-        <property name="vexpand">True</property>
+      <object class="GtkStack" id="panel_stack">
         <child>
-          <object class="GtkColumnView" id="units_browser">
-            <property name="model">
-              <object class="GtkSingleSelection" id="single_selection">
-                <property name="model">
-                  <object class="GtkFilterListModel" id="filter_list_model">
-                    <property name="model">
-                      <object class="GtkSortListModel" id="unit_list_sort_list_model">
+          <object class="GtkStackPage">
+            <property name="child">
+              <object class="AdwSpinner"/>
+            </property>
+            <property name="name">spinner</property>
+          </object>
+        </child>
+        <child>
+          <object class="GtkStackPage">
+            <property name="child">
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <child>
+                  <object class="GtkSearchBar" id="search_bar"/>
+                </child>
+                <child>
+                  <object class="GtkScrolledWindow">
+                    <property name="vexpand">True</property>
+                    <child>
+                      <object class="GtkColumnView" id="units_browser">
                         <property name="model">
-                          <object class="GListStore" id="list_store"/>
+                          <object class="GtkSingleSelection" id="single_selection">
+                            <property name="model">
+                              <object class="GtkFilterListModel" id="filter_list_model">
+                                <property name="model">
+                                  <object class="GtkSortListModel" id="unit_list_sort_list_model">
+                                    <property name="model">
+                                      <object class="GListStore" id="list_store"/>
+                                    </property>
+                                  </object>
+                                </property>
+                              </object>
+                            </property>
+                          </object>
                         </property>
+                        <property name="vexpand">True</property>
+                        <child>
+                          <object class="GtkColumnViewColumn">
+                            <property name="factory">
+                              <object class="GtkSignalListItemFactory">
+                                <signal name="bind" handler="col_unit_name_factory_setup"/>
+                                <signal name="bind" handler="col_unit_name_factory_bind"/>
+                              </object>
+                            </property>
+                            <property name="fixed-width">140</property>
+                            <property name="resizable">True</property>
+                            <property name="title">Unit</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkColumnViewColumn">
+                            <property name="factory">
+                              <object class="GtkSignalListItemFactory">
+                                <signal name="bind" handler="col_type_factory_bind"/>
+                                <signal name="setup" handler="col_type_factory_setup"/>
+                              </object>
+                            </property>
+                            <property name="fixed-width">75</property>
+                            <property name="resizable">True</property>
+                            <property name="title">Type</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkColumnViewColumn">
+                            <property name="factory">
+                              <object class="GtkSignalListItemFactory">
+                                <signal name="bind" handler="col_enable_status_factory_bind"/>
+                                <signal name="setup" handler="col_enable_status_factory_setup"/>
+                              </object>
+                            </property>
+                            <property name="fixed-width">70</property>
+                            <property name="resizable">True</property>
+                            <property name="title">Enable
+status</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkColumnViewColumn">
+                            <property name="factory">
+                              <object class="GtkSignalListItemFactory">
+                                <signal name="bind" handler="col_active_status_factory_bind"/>
+                                <signal name="setup" handler="col_active_status_factory_setup"/>
+                              </object>
+                            </property>
+                            <property name="fixed-width">75</property>
+                            <property name="resizable">True</property>
+                            <property name="title">Active
+status</property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkColumnViewColumn">
+                            <property name="expand">True</property>
+                            <property name="factory">
+                              <object class="GtkSignalListItemFactory">
+                                <signal name="bind" handler="col_description_factory_bind"/>
+                                <signal name="setup" handler="col_description_factory_setup"/>
+                              </object>
+                            </property>
+                            <property name="resizable">True</property>
+                            <property name="title">Description</property>
+                          </object>
+                        </child>
                       </object>
-                    </property>
+                    </child>
                   </object>
-                </property>
+                </child>
               </object>
             </property>
-            <property name="vexpand">True</property>
-            <child>
-              <object class="GtkColumnViewColumn">
-                <property name="factory">
-                  <object class="GtkSignalListItemFactory">
-                    <signal name="bind" handler="col_unit_name_factory_setup"/>
-                    <signal name="bind" handler="col_unit_name_factory_bind"/>
-                  </object>
-                </property>
-                <property name="fixed-width">140</property>
-                <property name="resizable">True</property>
-                <property name="title">Unit</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkColumnViewColumn">
-                <property name="factory">
-                  <object class="GtkSignalListItemFactory">
-                    <signal name="bind" handler="col_type_factory_bind"/>
-                    <signal name="setup" handler="col_type_factory_setup"/>
-                  </object>
-                </property>
-                <property name="fixed-width">75</property>
-                <property name="resizable">True</property>
-                <property name="title">Type</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkColumnViewColumn">
-                <property name="factory">
-                  <object class="GtkSignalListItemFactory">
-                    <signal name="bind" handler="col_enable_status_factory_bind"/>
-                    <signal name="setup" handler="col_enable_status_factory_setup"/>
-                  </object>
-                </property>
-                <property name="fixed-width">70</property>
-                <property name="resizable">True</property>
-                <property name="title">Enable
-status</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkColumnViewColumn">
-                <property name="factory">
-                  <object class="GtkSignalListItemFactory">
-                    <signal name="bind" handler="col_active_status_factory_bind"/>
-                    <signal name="setup" handler="col_active_status_factory_setup"/>
-                  </object>
-                </property>
-                <property name="fixed-width">75</property>
-                <property name="resizable">True</property>
-                <property name="title">Active
-status</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkColumnViewColumn">
-                <property name="expand">True</property>
-                <property name="factory">
-                  <object class="GtkSignalListItemFactory">
-                    <signal name="bind" handler="col_description_factory_bind"/>
-                    <signal name="setup" handler="col_description_factory_setup"/>
-                  </object>
-                </property>
-                <property name="resizable">True</property>
-                <property name="title">Description</property>
-              </object>
-            </child>
+            <property name="name">unit_list</property>
           </object>
         </child>
       </object>
